# OOP

./: README.md
lab1/: CMakeLists.txt  README.md  func.cpp  main.cpp  task.hpp  tests01.cpp
lab2/: CMakeLists.txt  README.md  func.cpp  main.cpp  six.hpp  tests01.cpp
lab3/: README.md  main.cpp
lab3/include/: Vector.hpp  figure.hpp  hexagon.hpp  pentagon.hpp  point.hpp  rhomb.hpp
lab3/src/: Vector.cpp  hexagon.cpp  pentagon.cpp  point.cpp  rhomb.cpp
lab3/test/: tests.cpp
lab4/: CMakeLists.txt  README.md  Vector.hpp  figure.hpp  hexagon.hpp  main.cpp  pentagon.hpp  point.hpp  rhomb.hpp  tests.cpp
lab5/: CMakeLists.txt  README.md  allocator.hpp  main.cpp
lab5/include/: allocator.hpp  stack.hpp
lab5/test/: test.cpp
lab6/: README.md  main.cpp
lab6/include/: npc.hpp  orc.hpp  squirrel.hpp
lab6/src/: druid.cpp  npc.cpp  orc.cpp  squirrel.cpp
lab6/test/: tests.cpp
lab7/: CMakeLists.txt  README.md  main.cpp
lab7/include/: druid.hpp  factory.hpp  npc.hpp  observer.hpp
lab7/src/: druid.cpp  npc.cpp  orc.cpp  squirrel.cpp
lab7/test/: tests.cpp
